增加swagger dao
