# app/model/build.go
@@ -1,0 +1,6 @@
+package model
+
+// 查询id
+type BuildApiReq struct {
+	Id string `v:"required"`
+}
